--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-   <div style="width:180px;">Matt Lee presents Bypass Paywalls
-      <br><a href="options.html">Options</a> | <a href="https://github.com/mattleeuk/bypass-paywalls-chrome"
+   <div style="width:180px;">Matt Lee presents Paywall Jumper
+      <br><a href="options.html">Options</a> | <a href="https://github.com/mattleeuk/paywall-jumper"
          target="_blank">GitHub</a> | <span id="version"></span></div>
    <script src="../js/common.js"></script>
    <script src="../js/version.js"></script>
